fix alert on mobile

--- a/public/css/simstyle.css
+++ b/public/css/simstyle.css
@@ -369,6 +369,9 @@ border-radius: 1rem!important;
       #logo {
           margin-left: 0px!important;
       }
+      .alert {
+        margin-top: 120px!important;
+      }
   }
 button {cursor: pointer;}
 
